# jenkinsapi-old

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .tags  .travis.yaml  .travis.yml  .travis.yml.todelete  LICENSE  Makefile  README  README.rst  TODO  build.xml  circle.yaml  jenkins_build.sh  license.txt  publish.bat  pylintrc  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  setup_config.py  setup_dev.bat  test-requirements.txt  tox.ini  tox.ini.todelete  travis.yaml
.github/: ISSUE_TEMPLATE.md  stale.yml
.github/workflows/: main.yaml  python-package.yml
doc/: .gitignore  CONTRIBUTING.md  Makefile  build.properties  build.xml  epydoc.cfg  run_epydoc.py
doc/source/: .gitignore  api.rst  artifact.rst  build.rst  conf.py  index.rst  rules_for_contributors.rst  ssl_certificate_verification  urlopener.rst  using_jenkinsapi.rst
examples/: create_a_job.py  create_a_view_low_level.py  example_download_war.py  example_param_build.py  fetch_artifact.py  get_config.py  job-build-sample  search_artifact_by_regexp.py  search_artifacts.py
examples/how_to/: add_command.py  create_a_job.py  create_credentials.py  create_nested_views.py  create_slave.py  create_views.py  delete_all_the_nodes_except_master.py  get_config.py  get_plugin_information.py  get_version_info_from_last_good_build.py  query_a_build.py  readme.rst  search_artifact_by_regexp.py  search_artifacts.py  start_parameterized_build.py  use_crumbs.py
examples/low_level/: copy_a_job.py  create_a_view_low_level.py  example_param_build.py  login_with_auth.py  post_watcher.py  readme.rst
jenkinsapi/: __init__.py  api.py  artifact.py  build.py  config.py  constants.py  credential.py  credentials.py  custom_exceptions.py  exceptions.py  executor.py  executors.py  fingerprint.py  invocation.py  invokation.py  jenkins.py  jenkinsbase.py  job.py  jobs.py  label.py  mutable_jenkins_thing.py  node.py  nodes.py  plugin.py  plugins.py  queue.py  result.py  result_set.py  view.py  views.py
jenkinsapi/command_line/: jenkins_invoke.py  jenkinsapi_version.py
jenkinsapi/utils/: crumb_requester.py  jenkins_launcher.py  jsonp_to_json.py  krb_requester.py  manifest.py  requester.py  retry.py  simple_post_logger.py  urlopener.py  urlopener_kerberos.py
jenkinsapi_tests/: conftest.py
jenkinsapi_tests/systests/: __init__.py  base.py  config.xml  conftest.py  get-jenkins-war.sh  job_configs.py  test_authentication.py  test_credentials.py  test_crumbs_requester.py  test_downstream_upstream.py  test_env_vars.py  test_executors.py  test_generate_new_api_token.py  test_invocation.py  test_jenkins.py  test_jenkins_artifacts.py  test_jenkins_matrix.py  test_nodes.py  test_parameterized_builds.py  test_plugins.py  test_queue.py  test_quiet_down.py  test_restart.py  test_safe_exit.py  test_scm.py  test_views.py  view_configs.py
jenkinsapi_tests/test_utils/: random_strings.py  simple_post_logger.py
jenkinsapi_tests/unittests/: configs.py  data_test_result.py  test_artifact.py  test_build.py  test_build_scm_git.py  test_compat.py  test_executors.py  test_fingerprint.py  test_jenkins.py  test_jenkinsbase.py  test_job.py  test_job_folders.py  test_job_get_all_builds.py  test_job_maven.py  test_job_multiconf.py  test_job_scm_hg.py  test_label.py  test_misc.py  test_node.py  test_nodes.py  test_queue.py  (+5 more)
jenkinsapi_utils/: compat.py  jenkins_launcher.py  simple_post_logger.py
misc/: jenkinsapi.sublime-project  make_venv.sh  readme.txt
pyjenkinsci/: api.py  artifact.py  build.py  exceptions.py  fingerprint.py  jenkins.py  jenkinsbase.py  jenkinsobject.py  job.py  node.py  result.py  result_set.py  view.py
requirements/: dev-requirements.txt
(+34 files in other folders)
