[metadata]
name = jenkinsapi
author = Salim Fadhley, Aleksey Maksimov
author_email = salimfadhley@gmail.com, ctpeko3a@gmail.com
summary = A Python API for accessing resources on a Jenkins continuous-integration server.
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Testing
    Topic :: Utilities


[files]
packages =
    jenkinsapi
    jenkinsapi_utils
    jenkinsapi_tests

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    jenkins_invoke=jenkinsapi.command_line.jenkins_invoke:main
    jenkinsapi_version=jenkinsapi.command_line.jenkinsapi_version:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package = jenkinsapi

[bdist_wheel]
universal = 1

[pycodestyle]
exclude = .tox,doc/source/conf.py,build
max-line-length = 99
